# missinghud2

./: .gitignore  CMakeLists.txt  README.md
res/: DllResources.h  DllResources.rc  MissingHUD2.qrc  WinResource.rc  WinResources.h
res/files/: MHUD2FontCharmap.texmap  MHUD2StatIcons.texmap
res/files/psds/: MHUD2Font.psd  MUD2StatIcons.psd  Missing HUD2 Banner.psd  Missing HUD2 Logo.psd
res/shaders/: hud_icon_frag.glsl  hud_icon_vert.glsl
src/: BoIInjector.cpp  BoIInjector.h  BoIProcess.cpp  BoIProcess.h  LoaderGUI.cpp  LoaderGUI.h  LoaderGUI.ui  MHUD_Error.h  MHUD_MsgQueue.cpp  MHUD_MsgQueue.h  MHUD_Options.cpp  MHUD_Options.h  MissingHUD2.cpp  mhud2_version.h
src/dll/: AfterbirthMemReader.cpp  AfterbirthMemReader.h  DLLPreferences.cpp  DLLPreferences.h  DllMain.cpp  GDISwapBuffers.cpp  GDISwapBuffers.h  GLStructs.cpp  GLStructs.h  HUDOverlay.cpp  HUDOverlay.h  HUDStat.cpp  HUDStat.h  IATHook.cpp  IATHook.h  IsaacMemSignatures.h  MemReader.cpp  MemReader.h  RebirthMemReader.cpp  RebirthMemReader.h  RebirthMemSignatures.h  ResourceLoader.cpp  ResourceLoader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteSheet.cpp  SpriteSheet.h  TextRenderer.cpp  TextRenderer.h
src/proto/: mhud2.proto
